task-14/go-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: go-app-ingress
  namespace: exam-49
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test.ittech.uz
    http:
      paths:
      - backend:
          service:
            name: go-app
            port:
              number: 80
        path: /
        pathType: Prefix
